Remove temporary direction migration endpoint
